--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@ set -g prefix C-s
 bind-key -r C-s send-prefix
 
 # Easy reloading
-bind r source-file ~/.tmux.conf\; display-message "~.tmux.conf reloaded"
+bind r source-file ~/.tmux.conf
 
 # Mouse mode keys
 bind m set -g mouse on
@@ -18,7 +18,7 @@ set -g status-fg '#aaaaaa'
 set -g status-left-length 50
 
 bind-key - split-window -v -c '#{pane_current_path}'
-bind-key \ split-window -h -c '#{pane_current_path}'
+bind-key \\ split-window -h -c '#{pane_current_path}'
 
 # Fine adjustment (1 or 2 cursor cells per bump)
 bind -n S-Left resize-pane -L 2
@@ -37,7 +37,7 @@ bind-key c new-window -c '#{pane_current_path}'
 
 # Start counting windows at 1
 set-option -g base-index 1
-set-option -g renumber-windows on 
+set-option -g renumber-windows on
 
 # break pane into new window
 bind-key b break-pane -d
@@ -48,9 +48,9 @@ bind-key C-j choose-tree
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
